--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "spotify-web-api-js": "^1.2.0",
+    "wingcss": "^1.0.0-beta"
   },
   "scripts": {
     "start": "react-scripts start",
